MFC r339241: Disallow zero day of month from strptime("%d").

PR:	232072